base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx-svc
spec:
  ports:
  - port: 8080
    targetPort: nginx-port
  selector:
    app: hello-nginx
