base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-nginx-route
spec:
  to:
    kind: Service
    name: hello-nginx-svc
  tls:
    termination: edge
